--- a/uni/VWL/2_Teil.tex
+++ b/uni/VWL/2_Teil.tex
@@ -1,4 +1,4 @@
-% Created 2018-05-16 Wed 10:36
+% Created 2018-05-16 Wed 13:31
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -28,7 +28,7 @@
  pdftitle={},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 27.0.50 (Org mode 9.1.9)}, 
+ pdfcreator={Emacs 26.0.91 (Org mode 9.1.6)}, 
  pdflang={English}}
 \begin{document}
 
@@ -37,7 +37,7 @@
 \newpage
 
 \section{Die kurze Frist}
-\label{sec:org5c3644e}
+\label{sec:orgfdf70e0}
 \begin{itemize}
 \item kombinierter Einsatz von Geld- und Fiskalpolitik\\
 \end{itemize}
@@ -77,7 +77,7 @@ Güternachfrage hängt von vielen Faktoren ab, u.a. vom \textbf{Gütermarkt} und
 \end{enumerate}
 
 \subsection{Der Gütermarkt}
-\label{sec:org35a8c39}
+\label{sec:orga35a8ac}
 Markteilnehmer auf em Gütermarkt sind die volkswirtschaftl. Sektoren (Haushalte, Staat, Unternehmen)
 
 \textbf{Makroökonomischer Gütermarkt=} (gedachte) Zusammenfassung aller Güterkäufe und -verkäufe in einem Land innerhalb 1 Periode (\(\approx\) BIP)
@@ -101,14 +101,14 @@ Die Importe (IM) entsprechen dem Kauf ausländischer Waren \& Dienstleistungen d
 \end{itemize}
 
 \subsubsection{Die gesamtwirtschaftliche Güternachfrage}
-\label{sec:orgb483c0a}
+\label{sec:orge18aa16}
 Ausgehend von der Zusammensetzung des Gütermarktes, also der Zusammenfassung aller Güterkäufe und -verkäufe, was wiederum etwa dem BIP entspricht, lässt sich die \textbf{Güternachfrage Z} wie folgt beschreiben: \(Z \equiv C + I + G + (X - IM)\). Dies ist zentral, da wir in der kurzen Frist ja den Fokus auf die Nachfrage und ihren Einfluss legen.
 In einer geschlossenen Marktwirtschaft (keine Ex-/Importe) gilt dann: \(Z \equiv C + I+ G\).
 
 \paragraph{Aufschlüsselung der Bestandteile von Güternachfrage Z}
 \begin{enumerate}
 \item Privater Konsum (C)
-\label{sec:org925c7cb}
+\label{sec:org468efc9}
 \begin{itemize}
 \item Konsumentenverhalten wird durch \textbf{Konsumfunktion} C(Y\(_{\text{v}}\)) beschrieben
 \item Konsum C steigt wenn verfügbares Einkommen Y\(_{\text{v}}\) zunimmt: \(C = C(Y_v) \rightarrow \frac{\partial C}{\partial Y_v} > 0\)
@@ -165,11 +165,11 @@ Der Konsum beim Einkommen von Null (autonomer Konsum) sinkt durch die Besteuerun
   \end{axis}
 \end{tikzpicture}
 \item Investitionen (I)
-\label{sec:org282826b}
+\label{sec:orgb2556f7}
 \newline
 Investitionen werden in diesem Modell als gegeben betrachtet, d.h als exogen angenommen. Gekennzeichnet wird dies durch einen Strich über der Variable: \(I = \bar{I}\) .
 \item Staatsausgaben (G) und Steuern (T)
-\label{sec:orgf0c40b1}
+\label{sec:org8f4c00e}
 \newline
 Basierend auf dem Regierungsprogramm ergibt sich ein bestimmtes Ausmaß an Staatsausgaben und Steuern, in diesem Sinn sind beide ebenfalls exogen: \(G = \bar{G}\) und \(T = \bar{T}\) (T sind Steuern minus Transfers).
 
@@ -177,7 +177,7 @@ Laut Regierungsprogramm sind die Staatsausgaben durch Steuern finanziert, daher 
 Werden Staatsausgaben oder Steuern verändert, um die gesamtwirtschaftliche Nachfrage zu beeinflussen, spricht man von Fiskalpolitik
 \end{enumerate}
 \subsubsection{Gleichgewicht auf dem Gütermarkt (Bestimmung der Produktion)}
-\label{sec:org52f8b4c}
+\label{sec:orgc04b6d5}
 Ein \textbf{Gleichgewicht auf dem Gütermarkt} stellt sich dann ein, wenn die \textbf{Güterproduktion Y} der \textbf{Güternachfrage Z} entspricht: \(Y = Z\). Dies ist eine Gleichgewichtsbedingung. Somit gilt (für \(X=IM=0\)):
 \begin{equation*}
 \begin{aligned}
@@ -194,7 +194,7 @@ Im Gleichgewicht entspricht die Produktion Y (linke Seite) der Nachfrage (rechte
 Die Gleichgewichtsbedingung spiegelt die zentrale Modellannahme wieder, dass die Produktion nur durch die Nachfrage bestimmt wird (nachfrageseitiges Modell).
 
 \subsubsection{Gleichungen des Gütermarktmodells}
-\label{sec:orgea6a90f}
+\label{sec:org996f1c3}
 Das Modell besteht aus folgenden Arten von Gleichungen:
 \begin{itemize}
 \item Definitionsgleichungen, hier: \(Z \equiv C + I + G\) und \(Y_v \equiv Y - T\)
@@ -229,11 +229,11 @@ Y = \frac{1}{1-c_1}*[c_0 - c_1 * \bar{T}+\bar{I}+\bar{G}]
 \end{itemize}
 
 \subsubsection{Graphische Analyse}
-\label{sec:org1c285a5}
+\label{sec:orgb97c366}
 \(\rightarrow\) Siehe handschriftliches Blatt
 
 \subsubsection{Der Multiplikatoreffekt}
-\label{sec:orgcb6840a}
+\label{sec:org98ab80d}
 Der Multiplikator ist die Summe sukzessiver Anstiege der Produktion, die aus einem Anstieg der Nachfrage resultieren
 
 Beispielsweise eine Erhöhung der autonomen Staatsausgaben: \(\Delta Y_1 = \Delta \bar{G}\)
@@ -253,4 +253,39 @@ Steigt die autonome Nachfrage um 1 Mio., dann ergibt sich nach \(n\) Runden eine
 \lim\limits_{n \to \infty}1+ c_1 + c_{1}^{2} + c_{1}^{3} + ... + c_{1}^{n} = \frac{1}{1-c_1}\
 \end{aligned}
 \end{equation*}
+
+\subsubsection{Die verbale Analyse}
+\label{sec:org23f175c}
+Kurzfristig (in der kurzen Frist) wird die Produktion von der Nachfrage bestimmt
+\begin{itemize}
+\item die Nachfrage hängt ihrerseitz vom Einkommen ab Z(Y)
+\end{itemize}
+
+Ein Anstieg der Nachfrage (zB Anstieg der Staatsausgaben) führt zu Anstieg der Produktion und zu einem entsprechenden Anstieg des Einkommens
+\begin{itemize}
+\item diese Einkommenserhöhung induziert einen weiteren Anstieg der Nachfrage \(\rightarrow\) dies führt wiederum zu einer weiteren Produktionssteigerung usw.
+\end{itemize}
+
+Im Endergebnis fällt der Anstieg weit größer aus als die ursprüngliche Verschiebung der Nachfrage und zwar genau um den Faktor, der dem Multiplikator entspricht
+
+Wie lange dauert es bis dieser Anpassungsprozess abgeschlossen ist?
+Nach einem Anstieg der Konsumausgaben wird nicht sofort das neue Gleichgewicht erreicht. Es findet vielmehr ein allmählicher Prozess der Anpassung statt.
+\begin{itemize}
+\item Geschwindigkeit hängt davon ab wie schnell die Firmen auf die neue Situation mit Produktionsanpassungen reagieren
+\end{itemize}
+
+Die formale Beschreibung dieser Anpassung der Produktion über die Zeit wird als \textbf{Dynamik} der Anpassung bezeichnet.
+
+\subsubsection{Investition gleich Ersparnis}
+\label{sec:orgaa8b106}
+Rest des verfügbaren Einkommens, der nicht für Konsum ausgegeben wird, wird gespart:
+
+\begin{itemize}
+\item Definitionsgleichung, hier: \(S = Y_v - C\)
+\item Verhaltensgleichung (keynesianische Sparfunktion), hier: \(S = Y - T - c_0 - c_1(Y-T)\) \\
+\end{itemize}
+\(= -c_0 + (1-c_1)*(Y-T)\)
+\begin{itemize}
+\item Gleichgewichtsbedingung, hier: \(Y=Z\) (Produktion = Güternachfrage)
+\end{itemize}
 \end{document}
