--- a/uni/VWL/2_Teil.tex
+++ b/uni/VWL/2_Teil.tex
@@ -1,4 +1,4 @@
-% Created 2018-05-16 Wed 14:20
+% Created 2018-05-17 Thu 12:56
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -22,6 +22,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{pgfplots}
+\usepackage{mathtools}
 \date{\today}
 \title{}
 \hypersetup{
@@ -38,7 +39,7 @@
 \newpage
 
 \section{Die kurze Frist}
-\label{sec:org6995476}
+\label{sec:org950acfe}
 \begin{itemize}
 \item kombinierter Einsatz von Geld- und Fiskalpolitik\\
 \end{itemize}
@@ -78,7 +79,7 @@ Güternachfrage hängt von vielen Faktoren ab, u.a. vom \textbf{Gütermarkt} und
 \end{enumerate}
 
 \subsection{Der Gütermarkt}
-\label{sec:org0a96a97}
+\label{sec:orgf068c2c}
 Markteilnehmer auf em Gütermarkt sind die volkswirtschaftl. Sektoren (Haushalte, Staat, Unternehmen)
 
 \textbf{Makroökonomischer Gütermarkt=} (gedachte) Zusammenfassung aller Güterkäufe und -verkäufe in einem Land innerhalb 1 Periode (\(\approx\) BIP)
@@ -102,14 +103,14 @@ Die Importe (IM) entsprechen dem Kauf ausländischer Waren \& Dienstleistungen d
 \end{itemize}
 
 \subsubsection{Die gesamtwirtschaftliche Güternachfrage}
-\label{sec:orgff4e65e}
+\label{sec:org51f4fa9}
 Ausgehend von der Zusammensetzung des Gütermarktes, also der Zusammenfassung aller Güterkäufe und -verkäufe, was wiederum etwa dem BIP entspricht, lässt sich die \textbf{Güternachfrage Z} wie folgt beschreiben: \(Z \equiv C + I + G + (X - IM)\). Dies ist zentral, da wir in der kurzen Frist ja den Fokus auf die Nachfrage und ihren Einfluss legen.
 In einer geschlossenen Marktwirtschaft (keine Ex-/Importe) gilt dann: \(Z \equiv C + I+ G\).
 
 \paragraph{Aufschlüsselung der Bestandteile von Güternachfrage Z}
 \begin{enumerate}
 \item Privater Konsum (C)
-\label{sec:orga7f1072}
+\label{sec:orgfe47be9}
 \begin{itemize}
 \item Konsumentenverhalten wird durch \textbf{Konsumfunktion} C(Y\(_{\text{v}}\)) beschrieben
 \item Konsum C steigt wenn verfügbares Einkommen Y\(_{\text{v}}\) zunimmt: \(C = C(Y_v) \rightarrow \frac{\partial C}{\partial Y_v} > 0\)
@@ -166,11 +167,11 @@ Der Konsum beim Einkommen von Null (autonomer Konsum) sinkt durch die Besteuerun
   \end{axis}
 \end{tikzpicture}
 \item Investitionen (I)
-\label{sec:org32d709f}
+\label{sec:orgc448711}
 \newline
 Investitionen werden in diesem Modell als gegeben betrachtet, d.h als exogen angenommen. Gekennzeichnet wird dies durch einen Strich über der Variable: \(I = \bar{I}\) .
 \item Staatsausgaben (G) und Steuern (T)
-\label{sec:orgb8188e7}
+\label{sec:org95cdfc1}
 \newline
 Basierend auf dem Regierungsprogramm ergibt sich ein bestimmtes Ausmaß an Staatsausgaben und Steuern, in diesem Sinn sind beide ebenfalls exogen: \(G = \bar{G}\) und \(T = \bar{T}\) (T sind Steuern minus Transfers).
 
@@ -178,7 +179,7 @@ Laut Regierungsprogramm sind die Staatsausgaben durch Steuern finanziert, daher 
 Werden Staatsausgaben oder Steuern verändert, um die gesamtwirtschaftliche Nachfrage zu beeinflussen, spricht man von Fiskalpolitik
 \end{enumerate}
 \subsubsection{Gleichgewicht auf dem Gütermarkt (Bestimmung der Produktion)}
-\label{sec:org4053609}
+\label{sec:org17e2d56}
 Ein \textbf{Gleichgewicht auf dem Gütermarkt} stellt sich dann ein, wenn die \textbf{Güterproduktion Y} der \textbf{Güternachfrage Z} entspricht: \(Y = Z\). Dies ist eine Gleichgewichtsbedingung. Somit gilt (für \(X=IM=0\)):
 \begin{equation*}
 \begin{aligned}
@@ -195,7 +196,7 @@ Im Gleichgewicht entspricht die Produktion Y (linke Seite) der Nachfrage (rechte
 Die Gleichgewichtsbedingung spiegelt die zentrale Modellannahme wieder, dass die Produktion nur durch die Nachfrage bestimmt wird (nachfrageseitiges Modell).
 
 \subsubsection{Gleichungen des Gütermarktmodells}
-\label{sec:orgc81c952}
+\label{sec:orgcfbcb18}
 Das Modell besteht aus folgenden Arten von Gleichungen:
 \begin{itemize}
 \item Definitionsgleichungen, hier: \(Z \equiv C + I + G\) und \(Y_v \equiv Y - T\)
@@ -230,11 +231,11 @@ Y = \frac{1}{1-c_1}*[c_0 - c_1 * \bar{T}+\bar{I}+\bar{G}]
 \end{itemize}
 
 \subsubsection{Graphische Analyse}
-\label{sec:org5109911}
+\label{sec:org34c4ced}
 \(\rightarrow\) Siehe handschriftliches Blatt
 
 \subsubsection{Der Multiplikatoreffekt}
-\label{sec:org3618b99}
+\label{sec:org3b1d3d6}
 Der Multiplikator ist die Summe sukzessiver Anstiege der Produktion, die aus einem Anstieg der Nachfrage resultieren
 
 Beispielsweise eine Erhöhung der autonomen Staatsausgaben: \(\Delta Y_1 = \Delta \bar{G}\)
@@ -256,7 +257,7 @@ Steigt die autonome Nachfrage um 1 Mio., dann ergibt sich nach \(n\) Runden eine
 \end{equation*}
 
 \subsubsection{Die verbale Analyse}
-\label{sec:org218c0f8}
+\label{sec:org7bf36f4}
 Kurzfristig (in der kurzen Frist) wird die Produktion von der Nachfrage bestimmt
 \begin{itemize}
 \item die Nachfrage hängt ihrerseitz vom Einkommen ab Z(Y)
@@ -278,7 +279,7 @@ Nach einem Anstieg der Konsumausgaben wird nicht sofort das neue Gleichgewicht e
 Die formale Beschreibung dieser Anpassung der Produktion über die Zeit wird als \textbf{Dynamik} der Anpassung bezeichnet.
 
 \subsubsection{Investition gleich Ersparnis}
-\label{sec:org4fb2a0a}
+\label{sec:orgd64bc88}
 Rest des verfügbaren Einkommens, der nicht für Konsum ausgegeben wird, wird gespart:
 
 \begin{itemize}
@@ -306,10 +307,10 @@ I = S + (G-T)
 S = Ersparnis privater Haushalte, (T - G) = Ersparnis des Staates
 
 \subsubsection{Ist die Regierung allmächtig? Eine Warnung}
-\label{sec:org5a19051}
+\label{sec:org7f55847}
 \begin{enumerate}
 \item Kann die Regierung Einfluss nehmen?
-\label{sec:org08c7616}
+\label{sec:org6851eb3}
 
 Fiskalpolitik = Teil der Finanzpolitik, der dem Stabilisierungsziel gewidmet ist; die Variation von Staatsausgaben bzw -einnahmen zur Beeinflussung der aggregierten Güternachfrage
 \begin{center}
@@ -331,10 +332,71 @@ indirekte Maßnahmen:
 \end{itemize}
 
 \item Wer ist für Fiskalpolitik verantwortlich?
-\label{sec:org6d0ab41}
+\label{sec:org0693566}
 
 Staat = Institution mit hoheitlicher Gewalt, d.h. Staat ist legitimiert \& fähig Zwangsmaßnahmen auszuüben
 
 Staatsquote = \(\frac{\text{Ausgaben der öffentl. Haushalte}}{\text{Bruttoinlandsprodukt}}\) in Prozent
+\item Kreditfinanzierte Erhöhung der Staatsausgaben
+\label{sec:orgc145a86}
+
+Eine Erhöhung der Staatsausgaben G erhöht die Nachfrage (\(\rightarrow\) Z-Kurve verschiebt sich nach oben), sodass Einkommen steigt und zwar gemäß dem Multiplikator um \(\frac{\delta Y}{\delta G} = \frac{1}{1-c_1}\).
+
+Da die zusätzlichen Ausgaben kreditfinanziert werden, wird die staatliche Ersparnis (T - G) kleiner. Dies wird aber durch die private Ersparnis S ausgeglichen, die mit dem Einkommen ansteigt.
+
+Da die erhöhten Staatsausgaben kreditfinanziert werden, vergrößert sich der Schuldenstand des Staates (nicht in unserem Modell enthalten!).
+\item Steuerfinanzierte Erhöhung der Staatsausgaben
+\label{sec:org8913f50}
+
+Eine Erhöhung der Staatsausgaben G wird durch eine gleichzeitige Erhöhung der Steuern T finanziert:
+\begin{equation*}
+\begin{aligned}
+Y = \frac{1}{1-c_1}*[c_0-c_1*\bar{T}+\bar{I}+\bar{G}]\\
+Y = \frac{1}{1-c_1}*[c_0+\bar{I}+(1 - c_1)*\bar{G}]
+\end{aligned}
+\end{equation*}
+Auch in der neuen Situation gilt G = T und damit bei steuerfinanzierten Änderungen von G: \(\frac{\delta Y}{\delta G} = \frac{1-c_1}{1-c_1} = 1\).
+Der Multiplikator ist somit lediglich 1 und damit kleiner als bei kreditfinanzierten Staatsausgaben. Das ergibt sich auch bei separater Betrachtung der Multiplikatoren:
+\begin{equation*}
+\begin{aligned}
+{\underbrace{\textstyle \frac{1}{1-c_1}}_{\mathclap{\text{ Staatsausgabenmultiplikator }}}} 
++
+{\overbrace{\textstyle \frac{-c_1}{1-c_1}}^{\mathclap{\text{ Steuermultiplikator }}}}
+=
+1
+\end{aligned}
+\end{equation*}
+
+\item Automatische Stabilisatoren
+\label{sec:orgc54152c}
+
+Idee: Konjunkturelle Schwankungen der Steuereinnahmen stabilisieren Nachfrage \(Z = c_0 + c_1 *(Y-T)+\bar{I}+\bar{G}\). Steuern (und Transfers) hängen endogen vom Einkommen ab: \(T= t*Y\), mit \(t=\text{Steuersatz} < 1\)
+
+\begin{equation*}
+\begin{aligned}
+Y = Z = c_0 + c_1- c_1  t Y + \bar{I} + \bar{G} & \qquad |+(c_1*t*Y),|-c_1 \nonumber\\
+Y - c_1 + c_1*t*Y = c_0 + \bar{I} + \bar{G}\\
+Y (1-c_1+c_1t) = c_0 + \bar{O} + \bar{G}\\
+Y = \frac{1}{1-c_1+c_1t}*[c_0+\bar{I}+\bar{G}]
+\end{aligned}
+\end{equation*}
+
+Der Multiplikator wird kleiner. Bei exogenen Schocks in \(\bar{I}\) oder c\(_{\text{o}}\) fallen Schwankungen geringer aus.
+
+\item Probleme bei Umsetzung direkter Nachfragesteuerung
+\label{sec:orga4e4269}
+
+\begin{itemize}
+\item Staatsausgaben oder Steuern rasch zu ändern ist nahezu unmöglich
+\item aufgrund komplexer Prozesse sind Auswirkungen auf Konsum, Investitionen, Importe etc. nur mit großer Unsicherheit zu prognostizieren
+\item Erwartungen spielen eine große Rolle
+\item empirisch ermittelte Multiplikatoren sind viel kleiner als im Modell und teilweise sogar < 1
+\item das Ziel eines bestimmten Produktionsniveaus kann unerwünschte Nebenwirkungen nach sich ziehen (zB Preissteigerungen)
+\item ein hohes Budgetdefizit \& hohe Staatsverschuldung kann langfristig schädliche Effekte auslösen
+\end{itemize}
 \end{enumerate}
+
+\subsection{Geld- und Finanzmärkte}
+\label{sec:orgcdeca79}
+F.62
 \end{document}
